// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchBar reducer should handle ENABLE_SEARCH_BAR 1`] = `
Object {
  "disabled": false,
  "placeholder": "Search DevTips",
  "value": "",
}
`;

exports[`searchBar reducer should handle unknown action type 1`] = `
Object {
  "disabled": true,
  "placeholder": "Search Channels",
  "value": "",
}
`;

exports[`searchBar reducer should return initial state 1`] = `
Object {
  "disabled": true,
  "placeholder": "Search Channels",
  "value": "",
}
`;
